[package]
name = "pg-snap"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
csv = "1.2.2"
chrono = "0.4.29"
serde_json = "1.0"
structopt = "0.3"
clap = { version = "4.4.4", features = ["derive"] }
postgres-types = { version = "0.2.6", features = ["derive"] }
bytes = "1.5.0"
rust_decimal = { version = "1.32.0", features = ["tokio-pg"] }
simple-log = "1.6.0"
uuid = "1.4.1"
hex = "0.4.3"
futures = "0.3.28"
bincode = "1.3.3"
serde = "1.0.188"
anyhow = "1.0.75"
rand = "0.8.5"
sqlx = { version = "0.7.2", features = [
    "postgres",
    "runtime-tokio-native-tls",
] }
futures-util = "0.3.29"
bytecount = "0.6.7"
