[package]
name = "pg-snap"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.0", features = ["derive"] }
rand = "0.8.5"
sqlx = { version = "0.7.2", features = [
    "postgres",
    "runtime-tokio-native-tls",
] }
pg_query = "5.1"
tokio = { version = "1.32.0", features = ["full"] }
futures-util = "0.3"
futures-macro = "=0.3.30"
bytes = "1.5.0"
bytecount = "0.6.7"
csv = "1.3.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
serde = "1.0.197"
serde_json = "1.0.114"
env_logger = "0.11.2"
log = "0.4.21"
colored = "2.1.0"
bincode = "1.3.3"
zip = "0.6.6"
walkdir = "2.5.0"
prost-build = { version = "0.12.3", features = ["cleanup-markdown"] }
regex = "1.10.4"

[dev-dependencies]
testcontainers-modules = { version = "0.3.5", features = ["postgres"] }
sha256 = "1.0.3"
